Revision history for Perl extension Net::FTP::Common.

0.01  Tue Oct 10 09:15:32 2000
	- original version; created by h2xs 1.20 with options
		-A -X -n Net::FTP::Common
